--- a/deepdream/index_2.html
+++ b/deepdream/index_2.html
@@ -17,14 +17,14 @@
     <body data-ng-app="akoenig.deckgrid.demo">
       <div class="container" data-ng-view></div>
 
-        <script src="scripts/vendor/angular.min.js"></script>
-        <script src="scripts/vendor/angular-route.min.js"></script>
-        <script src="scripts/vendor/lodash.min.js"></script>
-        <script src="scripts/angular-deckgrid.min.js"></script>
+        <script src="./scripts/vendor/angular.min.js"></script>
+        <script src="./scripts/vendor/angular-route.min.js"></script>
+        <script src="./scripts/vendor/lodash.min.js"></script>
+        <script src="./scripts/angular-deckgrid.min.js"></script>
 
 
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/home.js"></script>
-        <script src="scripts/directives/imageloaded.js"></script>
+        <script src="./scripts/app.js"></script>
+        <script src="./scripts/controllers/home.js"></script>
+        <script src="./scripts/directives/imageloaded.js"></script>
     </body>
 </html>
